--- a/package.json
+++ b/package.json
@@ -61,7 +61,9 @@
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.9"
+    "vaul": "^0.9.9",
+    "zod": "^3.23.8",
+    "@hookform/resolvers": "^3.9.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
