--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "lucide-react": "^0.446.0",
     "next": "15.1.4",
     "next-themes": "^0.3.0",
+    "razorpay": "^2.9.5",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-calendly": "^4.3.1",
