--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "lucide-react": "^0.446.0",
     "next": "15.1.4",
     "next-themes": "^0.3.0",
+    "primereact": "^10.9.2",
     "razorpay": "^2.9.5",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
@@ -62,6 +63,7 @@
     "react-resizable-panels": "^2.1.6",
     "recharts": "^2.13.3",
     "sonner": "^1.7.0",
+    "swiper": "^11.2.4",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
