--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^3.9.1",
+    "@mui/material": "^6.4.5",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -61,6 +64,7 @@
     "react-obfuscate": "^3.7.0",
     "react-quill": "^2.0.0",
     "react-resizable-panels": "^2.1.6",
+    "react-stripe-checkout": "^2.6.3",
     "recharts": "^2.13.3",
     "sonner": "^1.7.0",
     "swiper": "^11.2.4",
