--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "embla-carousel-react": "^8.3.1",
     "framer-motion": "^11.9.0",
     "gapi-script": "^1.2.0",
+    "heroicons": "^2.2.0",
     "input-otp": "^1.4.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.446.0",
